--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -3843,8 +3843,10 @@ kg
                     "story_id": "303",
                     "story_title": "アフタヌーンローズ",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/303/1/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=110740992", "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/303/2/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=434182704"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/303/1/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=776590525", "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/303/2/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=765383038"],
+                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/303/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/303/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/303/1/idol_gallery/__hash_card_id__", 
+                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/303/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
                     "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/015.jpg", 
                              "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_303_2.jpg"],
@@ -3854,8 +3856,10 @@ kg
                     "story_id": "263",
                     "story_title": "綿雪の戯れ",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/263/1/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=895219160", "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/263/2/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=17454157"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/263/1/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=340202948", "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/263/2/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=969057774"],
+                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/263/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/263/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/263/1/idol_gallery/__hash_card_id__", 
+                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/263/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
                     "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/015.jpg",
                              "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_263_2.jpg"],
@@ -3865,8 +3869,10 @@ kg
                     "story_id": "227",
                     "story_title": "ひと夏の華",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/227/1/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=973804564", "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/227/2/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=702466210"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/227/1/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=872801795", "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/227/2/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=532511380"],
+                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/227/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/227/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/227/1/idol_gallery/__hash_card_id__", 
+                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/227/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
                     "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/base/015.jpg", 
                              "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_227_2.jpg"],
@@ -3876,8 +3882,10 @@ kg
                     "story_id": "190",
                     "story_title": "新春☆開運招福",
                     "voice_enable": ["0", "0"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/190/1/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=334027820", "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/190/2/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=587638614"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/190/1/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=412684612", "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/190/2/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=883950170"],
+                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/190/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/190/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/190/1/idol_gallery/__hash_card_id__", 
+                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/190/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
                     "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_190_1.jpg", 
                              "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_190_2.jpg"],
@@ -3891,8 +3899,8 @@ kg
                         "4": "1"
                     },
                     "flash_path": {
-                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/150/2/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=868642568",
-                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/150/5/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=162237816"
+                        "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/150/2/idol_gallery--idol_detail--__hash_card_id__--2",
+                        "4": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/150/5/idol_gallery--idol_detail--__hash_card_id__--2"
                     },
                     "voice_url": {
                         "1": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/150/2/idol_gallery/__hash_card_id__",
@@ -3914,8 +3922,10 @@ kg
                     "story_id": "114",
                     "story_title": "アイドルプロデュース the 4th Anniversary",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/114/1/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=568631510", "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/114/2/idol_gallery--idol_detail--__hash_card_id__--2?l_frm=Idol_gallery_idol_detail_1&rnd=705966340"],
-                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/114/1/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=548959583", "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/114/2/idol_gallery/__hash_card_id__?l_frm=Idol_gallery_idol_detail_1&rnd=322621911"],
+                    "flash_path": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/114/1/idol_gallery--idol_detail--__hash_card_id__--2", 
+                                   "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/movie_play/114/2/idol_gallery--idol_detail--__hash_card_id__--2"],
+                    "voice_url": ["http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/114/1/idol_gallery/__hash_card_id__", 
+                                  "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_story/sound_play/114/2/idol_gallery/__hash_card_id__"],
                     "open_flag": ["1", "1"],
                     "icon": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_114_1.jpg", 
                              "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/episode/epi_button_movie_114_2.jpg"],
@@ -4427,11 +4437,11 @@ kg
         <script src="../../js/min/gallery.min.js" type="text/javascript"></script>
         <script src="../../js/min/bb_loader.min.js" type="text/javascript"></script>
         <div class="m-Top8 m-Btm8">
-            <img src="http://sp.pf-img-a.mbga.jp/12008305?url=http://125.6.169.35/idolmaster/image_sp/ui/line_hoshi.jpg" width="100%">
+            <img src="../../image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
         <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
-        <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_gallery'>
-            <div class="backLink">アイドルギャラリーTOP</div>
+        <a href='../../mypage.html'>
+            <div class="backLink">マイスタジオ</div>
         </a>
         <footer>
             <div class="line_idolmaster"></div><a href="#top" id="toPageTop" class="mypage_under">
