--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -3995,12 +3995,12 @@ kg
                             "pa": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/gallery/bg_sr_passion.jpg"
                         }
                     },
-                    "l": ["http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/1cefdef7df7c14eca803910b67e61dfc.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/fe2f3ecbf682014be99d3f94512a48bd.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/2b676cf6e1bd042f04a6e8367ac47fdd.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/21d48ab7d98d5800c7a8db34c89842cd.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/eb1d6cdcf74fa0b5467bb4479fbcb819.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/68e199a73566867818bddc1cea19666e.jpg", 
+                    "l": ["../../image_sp/card/l/momoka_01.jpg", 
+                          "../../image_sp/card/l/momoka_02.jpg", 
+                          "../../image_sp/card/l/momoka_03.jpg", 
+                          "../../image_sp/card/l/momoka_04.jpg", 
+                          "../../image_sp/card/l/momoka_25.jpg", 
+                          "../../image_sp/card/l/momoka_26.jpg", 
                           "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/9e47b6134fcc68ce03f1e646032535f6.jpg", 
                           "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/188588430665ce152a5da1c7bef37766.jpg", 
                           "", 
